--- a/templates/pieces.html
+++ b/templates/pieces.html
@@ -91,8 +91,8 @@
             </tr>
         </thead>
         <tbody>
-            {% if pieces %}
-                {% for piece in pieces %}
+            {% if pieces.items %}
+                {% for piece in pieces.items %}
                 <tr class="{{ 'table-danger' if piece.quantite_stock <= piece.stock_mini else 'table-warning' if piece.quantite_stock <= piece.stock_mini + 2 else '' }} {{ 'table-secondary' if not piece.item or not piece.reference_ste }}">
                     <td class="d-none d-md-table-cell">{{ piece.reference_ste or '<span class="text-muted">Non renseigné</span>'|safe }}</td>
                     <td>
